1.引入sentinel对接口进行限流和熔断2.引入京东hot-key对热点数据进行动态缓存3.引入nacos和布隆过滤器实现动态黑名单id过滤4.对标签匹配进行异步化5.引入对每个用户标签匹配历史记录